--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-core</artifactId>
+	<version>4.3.0.Final</version>
+	<scope>provided</scope>
+   </dependency>
+		
+		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<version>1.0.1.Final</version>
