--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,11 +13,27 @@
      <auth-constraint>
          <role-name>admin</role-name>
              <role-name>GD</role-name>
+               <role-name>Client</role-name>
      </auth-constraint>
      <user-data-constraint>
          <transport-guarantee>NONE</transport-guarantee>
      </user-data-constraint>
 </security-constraint>
+
+<security-constraint>
+     <display-name>Constraint-1</display-name>
+     <web-resource-collection>
+         <web-resource-name>Constraint-1</web-resource-name>
+         <url-pattern>/process</url-pattern>
+     </web-resource-collection>
+     <auth-constraint>
+         <role-name>admin</role-name>
+     </auth-constraint>
+     <user-data-constraint>
+         <transport-guarantee>NONE</transport-guarantee>
+     </user-data-constraint>
+</security-constraint>
+
 <security-constraint>
    <web-resource-collection>
       <web-resource-name>Exclude from Security</web-resource-name>
@@ -40,7 +56,9 @@
 <security-role>
      <role-name>GD</role-name>
 </security-role>
-
+<security-role>
+     <role-name>Client</role-name>
+</security-role>
 	<!-- Welcome files -->
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
