--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,18 @@
 				</configuration>
 			</plugin>
 			<plugin>
+	         <groupId>org.apache.maven.plugins</groupId>
+	         <artifactId>maven-source-plugin</artifactId>
+	         <executions>
+	            <execution>
+	               <id>attach-sources</id>
+	               <goals>
+	                  <goal>jar</goal>
+	               </goals>
+	            </execution>
+	         </executions>
+	      </plugin>
+			<plugin>
 				<groupId>org.jboss.as.plugins</groupId>
 				<artifactId>jboss-as-maven-plugin</artifactId>
 				<version>7.3.Final</version>
