--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,66 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
-	<display-name>jbpm-demo-rewards-basic</display-name>
-	<description></description>
-<security-constraint>
-     <display-name>Constraint-0</display-name>
-     <web-resource-collection>
-         <web-resource-name>Constraint-0</web-resource-name>
-         <url-pattern>/*</url-pattern>
-     </web-resource-collection>
-     <auth-constraint>
-         <role-name>admin</role-name>
-             <role-name>GD</role-name>
-               <role-name>Client</role-name>
-     </auth-constraint>
-     <user-data-constraint>
-         <transport-guarantee>NONE</transport-guarantee>
-     </user-data-constraint>
-</security-constraint>
-
-<security-constraint>
-     <display-name>Constraint-1</display-name>
-     <web-resource-collection>
-         <web-resource-name>Constraint-1</web-resource-name>
-         <url-pattern>/process</url-pattern>
-     </web-resource-collection>
-     <auth-constraint>
-         <role-name>admin</role-name>
-     </auth-constraint>
-     <user-data-constraint>
-         <transport-guarantee>NONE</transport-guarantee>
-     </user-data-constraint>
-</security-constraint>
-
-<security-constraint>
-   <web-resource-collection>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  <display-name>jbpm-demo-rewards-basic</display-name>
+  <description></description>
+  <security-constraint>
+    <display-name>Constraint-0</display-name>
+    <web-resource-collection>
+      <web-resource-name>Constraint-0</web-resource-name>
+      <url-pattern>/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>admin</role-name>
+      <role-name>GD</role-name>
+      <role-name>Client</role-name>
+    </auth-constraint>
+    <user-data-constraint>
+      <transport-guarantee>NONE</transport-guarantee>
+    </user-data-constraint>
+  </security-constraint>
+  <security-constraint>
+    <display-name>Constraint-1</display-name>
+    <web-resource-collection>
+      <web-resource-name>Constraint-1</web-resource-name>
+      <url-pattern>/process</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>admin</role-name>
+    </auth-constraint>
+    <user-data-constraint>
+      <transport-guarantee>NONE</transport-guarantee>
+    </user-data-constraint>
+  </security-constraint>
+  <security-constraint>
+    <web-resource-collection>
       <web-resource-name>Exclude from Security</web-resource-name>
-      <url-pattern>/resources/*</url-pattern><!-- No security for images -->
-      
-   </web-resource-collection>
-</security-constraint>
-
-<login-config>
-     <auth-method>FORM</auth-method>
-     <form-login-config>
-         <form-login-page>/login.jsp</form-login-page>
-         <form-error-page>/failedlogin.jsp</form-error-page>
-     </form-login-config>
-</login-config>
-
-<security-role>
-     <role-name>admin</role-name>
-</security-role>
-<security-role>
-     <role-name>GD</role-name>
-</security-role>
-<security-role>
-     <role-name>Client</role-name>
-</security-role>
-	<!-- Welcome files -->
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+      <url-pattern>/resources/*</url-pattern>
+    </web-resource-collection>
+  </security-constraint>
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+      <form-login-page>/login.jsp</form-login-page>
+      <form-error-page>/failedlogin.jsp</form-error-page>
+    </form-login-config>
+  </login-config>
+  <security-role>
+    <role-name>admin</role-name>
+  </security-role>
+  <security-role>
+    <role-name>GD</role-name>
+  </security-role>
+  <security-role>
+    <role-name>Client</role-name>
+  </security-role>
+   <welcome-file-list>
+    <welcome-file>home</welcome-file>
+  </welcome-file-list>
 </web-app>
