--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,12 @@
 	</dependencyManagement>
 
 	<dependencies>
-
+  <!-- commons lib depedancy -->
+  <dependency>
+	<groupId>commons-fileupload</groupId>
+	<artifactId>commons-fileupload</artifactId>
+	<version>1.2</version>
+</dependency>
 		<!-- infinispan dependencies -->
 		<dependency>
 			<groupId>org.infinispan</groupId>
@@ -36,7 +41,19 @@
 			<version>${infinispan.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<!-- jason dependancy -->
+		<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20090211</version>
+</dependency>
+<!--  Gson: Java to Json conversion -->
+<!--     <dependency> -->
+<!--       <groupId>com.google.code.gson</groupId> -->
+<!--       <artifactId>gson</artifactId> -->
+<!--       <version>2.2.2</version> -->
+<!--       <scope>compile</scope> -->
+<!--     </dependency> -->
 		<!-- Java EE dependencies -->
 		<dependency>
 			<groupId>org.jboss.spec.javax.ejb</groupId>
